<?xml version="1.0"?>
<package format="3">
  <name>hiwonder_turbopi_sdk</name>
  <version>0.1.0</version>
  <description>HiWonder TurboPi SDK wrapped as a ROS 2 vendor package.</description>
  <maintainer email="garegin.ma@gmail.com">Garegin</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
